ico change color

--- a/Index.css
+++ b/Index.css
@@ -167,6 +167,7 @@ div.service_ico_conteyner i:hover{
   
 i.ico{
     font-size: 50px;
+    color: rgb(192, 48, 28);
     width: 86px;
     height: 86px;
     margin: auto;
