--- a/Index.css
+++ b/Index.css
@@ -16,9 +16,9 @@ header{
 }
 
 div.logo_container{
-    display: flex;
     margin: auto;
     margin-left: 0px;
+    width: 570px;
 }
 
 a.logo{
@@ -116,7 +116,7 @@ section.services{
     width: 1140px;
 }
 
-h2.services_title{
+h2.section_title{
     font-size: 20px;
     font-family: "Montserrat";
     color: rgb(85, 85, 85);
@@ -126,7 +126,7 @@ h2.services_title{
     margin-bottom: 25px;
 }
 
-p.services_title_description{
+p.section_title_description{
     font-size: 16px;
     font-family: "Roboto Slab";
     color: rgb(85, 85, 85);
@@ -192,4 +192,27 @@ p.servicer_ico_description{
     margin-top: 25px;
 }
 
+section.about{
+    height: 852px;
+    background-color: rgb(248, 248, 248);
+    text-align: center;
+}
+
+div.about_description_conteyner{
+    display: flex;
+    width: 1140px;
+    justify-content: space-between;
+    margin: auto;
+}
+
+div.about_description_block p{
+    font-size: 14px;
+    font-family: "Roboto Slab";
+    font-weight: 400;
+    color: rgb(85, 85, 85);
+    line-height: 1.714;
+    width: 555px;
+    height: 110px;
+    text-align:start;
+}
   
