--- a/Index.css
+++ b/Index.css
@@ -57,12 +57,12 @@ header{
     flex-wrap: wrap;
 }
 
-.menu-elements{
+.navigation-menu__element{
     list-style-type: none;
     margin-left: 30px;
 }
 
-.menu-elements  a{
+.navigation-menu__element  a{
     font-size: 14px;
     font-family: "Montserrat", "Arial", sans-serif;
     color: rgb(255, 255, 255);
@@ -681,6 +681,7 @@ img:hover + .caption{
     line-height: 1.714;
     color: #555;
     margin-bottom: 35px;
+    padding-right: 1px;
 }
 
 .text__read-more-link {
