--- a/Index.css
+++ b/Index.css
@@ -14,6 +14,22 @@
     font-style: normal;
 }
 
+.visually-hidden:not(:focus):not(:active),
+input[type="checkbox"].visually-hidden,
+input[type="radio"].visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  -webkit-clip-path: inset(100%);
+          clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+
 body{
     margin:0px;
     display: flex;
@@ -87,7 +103,7 @@ header{
     display: flex;
     background-color: rgb(0, 0, 0);
     opacity: 0.451;
-    width: 1600px;
+    width: 100%;
     height: 770px;     
 }
 
@@ -270,7 +286,6 @@ header{
     display: flex;
     flex-direction: row;
     width: 1140px;
-    height: 310px;
     justify-content: space-between;
     margin: auto;
     margin-top: 75px;
@@ -343,7 +358,7 @@ header{
     color: rgb(85, 85, 85);
     text-transform: uppercase;
     margin-top: 20px;
-    margin-bottom: 20px;
+    margin-bottom: 10px;
 }
 
 .employer-post{
@@ -351,7 +366,7 @@ header{
     font-family: "Roboto-Slab", "Arial", sans-serif;
     color: rgb(85, 85, 85);
     line-height: 1.846;
-    margin-top: 0px;
+    margin-top: 10px;
 }
 
 .slider__left-button-block{
@@ -360,11 +375,19 @@ header{
     left: 0px;
 }
 
+.slider__left-button-block p{
+ font-size: 0px;
+}
+
 .slider__right-button-block{
     position: absolute;
     top:105px;
     right: 0px;
 }
+
+.slider__right-button-block p{
+    font-size: 0px;
+   }
 
 .slider__left-button-block button{
     background-color: rgba(85, 85, 85, 0.2);
@@ -411,7 +434,7 @@ background-color: rgb(192, 48, 28);
 
 .works__filters li a{
         font-size: 16px;
-        font-family: "Roboto Slab", "Arial", sans-serif;
+        font-family: "Roboto-Slab", "Arial", sans-serif;
         color: rgb(85, 85, 85);
         text-transform: capitalize;
         text-decoration: none;
@@ -464,7 +487,7 @@ img:hover + .caption{
 
 .caption p{
     font-size: 12px;
-    font-family: "Roboto Slab", "Arial", sans-serif;
+    font-family: "Roboto-Slab", "Arial", sans-serif;
     color: rgb(255, 255, 255);
     line-height: 2;
     text-align: center;
@@ -476,7 +499,7 @@ img:hover + .caption{
 .caption button{
     cursor: pointer;
     font-size: 14px;
-    font-family: "Roboto Slab", "Arial", sans-serif;
+    font-family: "Roboto-Slab", "Arial", sans-serif;
     color: rgb(192, 48, 28);
     border: 0px;
     text-transform: uppercase;
@@ -580,19 +603,17 @@ img:hover + .caption{
     margin-top: 77px;
 }
 
-.blog__articles > div:not(:first-of-type)::before {
-    position: absolute;
-    width: 1140px;
-    color: rgba(0, 0, 0, 0);
-    content: "";
-    border-top: 1px solid #ddd;
-    margin: -40px 0px;
-}
 
 .blog__article {
     position: relative;
     display:flex;
-    margin-bottom: 77px;
+    margin-top: 39px;
+    margin-bottom: 39px;
+}
+
+.blog__articles > div:not(:last-of-type) {
+    border-bottom: solid rgb(221, 221, 221) 1px;
+    padding-bottom: 39px;
 }
 
 
@@ -641,6 +662,10 @@ img:hover + .caption{
 .article-header__link {
     text-decoration: none;
     cursor: pointer;
+}
+
+.article-header__link:visited {
+    color: #777;
 }
 
 .article-header__link:hover,
@@ -798,6 +823,12 @@ img:hover + .caption{
     color: #555;
 }
 
+.contact-info-fragment__title a {
+    text-decoration: none;
+    color: #555;
+}
+
+
 .contact-info-fragment i {
     font-size: 20px;
     width: 33px;
@@ -847,7 +878,7 @@ img:hover + .caption{
     width: 688px;
     padding: 18px;
     border: 1px solid #555;
-    resize: none;
+    resize: vertical;
 }
 
 .contact-form__footer {
