--- a/Part_2/index.css
+++ b/Part_2/index.css
@@ -74,18 +74,43 @@
     margin-top: 120px;
 }
 
+
+.col--design{
+    display: none;
+}
+
+.col--code{
+    display: none;
+}
+
+.col--photography{
+    display: none;
+}
+
+.col--apps{
+    display: none;
+}
+
+.col--all{
+    display: block;
+}
+
+
+
 .col--first{
     max-width: fit-content; 
 }
 
+.col--image div img{
+    width: 100%;
+    height: 100%;
+}
 
 
 .presentation-hover-box{
     display: none;
     background-color: rgba(255, 218, 0, 0.8);
     height: 100%;
-    padding: 60px 70px;
-    padding-right: 120px;
 }
 
 .presentation-hover-box h3{
@@ -95,6 +120,8 @@
     line-height: 3.202;
     text-align: left;
     text-transform: capitalize;
+    max-width: fit-content;
+    padding-left: 70px;
 }  
 
 .presentation-hover-box p{
@@ -102,16 +129,22 @@
     font-family: "OpenSans";
     color: rgb(67, 66, 66);
     line-height: 1.625;
+    max-width: fit-content;
     margin: 0;
+    padding-left: 70px;
+    padding-right: 120px;
 }
 
 .presentation-hover-box button{
-        border:solid 2px rgb(0, 0, 0);
-        background: none;
-        width: 178px;
-        height: 45px;
-        text-transform: capitalize;
-        margin-top: 60px;
+    border:solid 2px rgb(0, 0, 0);
+    background: none;
+    max-width: 178px;
+    padding-left: 40px;
+    padding-right: 40px;
+    height: 45px;
+    text-transform: capitalize;
+    margin-top: 60px;
+    margin-left: 70px;
 }
 
 .col.position-relative:hover div{
@@ -128,7 +161,7 @@
     height: 300px;
     max-width: 360px;
     margin-top: 30px;
-    padding: 0 20px;
+    padding: 0 40px;
 }
 
 .projects-presentation .row *.col h3{
@@ -144,7 +177,7 @@
     font-size: 13px;
     font-family: "OpenSans", "Arial", serif; 
     color: rgb(255, 255, 255);  
-    line-height: 1.2;
+    line-height: 2;
     text-align: center;
     margin-top: 40px;
 }
@@ -367,6 +400,7 @@
 }
 
 .row-email *.col{
+    position: relative;
     height: 50px;
 }
 
@@ -379,7 +413,19 @@
     width: 460px;
     height: 50px;
     padding: 16px 26px;
-}  
+} 
+
+.row-email .col input + ul li.parsley-type{
+    position: absolute;
+    bottom: -30px;
+    color: rgb(255, 235, 59);
+}
+
+.row-email .col input + ul li.parsley-maxlength{
+    position: absolute;
+    bottom: -54px;
+    color: rgb(255, 235, 59);
+}
 
 .row-email .col button{
     font-size: 14px;
